  exist as a compatibility symbol (on those architectures which had it),
  but always fails with ENOSYS.  This reflects the removal of the system
  call from all architectures, starting with Linux 5.5.

* The sstk function is no longer available to newly linked binaries.
  Its implementation always returned with a failure, and the function
  was not declared in any header file.

* ldconfig now defaults to the new format for ld.so.cache. glibc has
  already supported this format for almost 20 years.

Changes to build and runtime requirements:

* powerpc64le requires GCC 7.4 or newer.  This is required for supporting
  long double redirects.

Security related changes:

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

  CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
  out-of-bounds write when executed in a signal frame context.

  CVE-2020-1752: A use-after-free vulnerability in the glob function when
  expanding ~user has been fixed.

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.31

Major new features:

* The GNU C Library now supports a feature test macro _ISOC2X_SOURCE to
  enable features from the draft ISO C2X standard.  Only some features from
  this draft standard are supported by the GNU C Library, and as the draft
  is under active development, the set of features enabled by this macro is
  liable to change.  Features from C2X are also enabled by _GNU_SOURCE, or
  by compiling with "gcc -std=gnu2x".

* The <math.h> functions that round their results to a narrower type now
  have corresponding type-generic macros in <tgmath.h>, as defined in TS
  18661-1:2014 and TS 18661-3:2015 as amended by the resolution of
  Clarification Request 13 to TS 18661-3.
